# pdfdeal

./: pyproject.toml
src/pdfdeal/: doc2x.py  doc2x_img.py  doc2x_legacy.py
src/pdfdeal/Doc2X/: ConvertV1.py  ConvertV2.py  Types.py
src/pdfdeal/FileTools/: file_tools.py
tests/: test_pdf2file.py  test_pic2file.py
