[project]
name = "pdfdeal"
version = "1.0.3"
authors = [{ name = "noedgeai", email = "support@noedgeai.com" }]
description = "Python SDK for Doc2X API and some native texts processing (to improve texts recall in RAG)."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["httpx[http2]>=0.23.1, <1", "pypdf"]

[project.optional-dependencies]
tools = ["emoji", "Pillow", "reportlab", "beautifulsoup4"]
rag = [
    "emoji",
    "Pillow",
    "reportlab",
    "oss2",
    "boto3",
    "minio",
    "beautifulsoup4",
]
dev = [
    "pytest",
    "emoji",
    "Pillow",
    "reportlab",
    "oss2",
    "boto3",
    "minio",
    "beautifulsoup4",
]

[project.urls]
Issues = "https://github.com/NoEdgeAI/pdfdeal/issues"
Documentation = "https://noedgeai.github.io/pdfdeal-docs"
Source = "https://github.com/NoEdgeAI/pdfdeal"
Changelog = "https://noedgeai.github.io/pdfdeal-docs/changes"

[project.scripts]
doc2x = "pdfdeal.CLI.doc2x:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfdeal"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
